--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
         <!--Restaurant Detail View Controller-->
         <scene sceneID="fob-R8-QNR">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="mfo-0b-byD" customClass="RestaurantDetailViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RestaurantDetailViewController" hidesBottomBarWhenPushed="YES" id="mfo-0b-byD" customClass="RestaurantDetailViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="uXj-l8-nv2">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
